--- a/src/AllRoute/Navbar.module.css
+++ b/src/AllRoute/Navbar.module.css
@@ -5,8 +5,9 @@
   justify-content: space-between;
   background-color: blueviolet;
   color: #fff;
-  padding: 1rem;
+  /* padding: 1rem; */
   font-family: Verdana, Geneva, Tahoma, sans-serif ;
+  /* border: 1px solid red; */
 
 }
 
@@ -39,7 +40,7 @@
 /* Individual navigation link */
 .navLink {
   display: block;
-  padding: 1rem;
+  padding: 0 1rem;
   text-decoration: none;
   color: #fff;
 }
@@ -58,7 +59,7 @@
   width: 100%;
   height: calc(100vh - 4rem);
   background-color: #222;
-  padding: 1rem;
+  /* padding: 1rem; */
   overflow-y: scroll;
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
